src/test/ui/typeck/issue-87935-unsized-box-expr.stderr
error[E0277]: the size for values of type `[u32]` cannot be known at compilation time
  --> $DIR/issue-87935-unsized-box-expr.rs:4:30
   |
LL |     let _x: Box<[u32]> = box { loop {} };
   |                              ^^^^^^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u32]`
   = note: the type of a box expression must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
